Changed Points component positioning to prevent moving letters/searchbar out of place

--- a/thesarush/src/components/Column/styles.css
+++ b/thesarush/src/components/Column/styles.css
@@ -8,7 +8,7 @@
 
     max-height: 100vh;
 
-    top: -465px;
+    top: -445px;
     animation: drop 0.6s forwards;
 }
 
